--- a/ATM ApplicationTask/appsettings.json
+++ b/ATM ApplicationTask/appsettings.json
@@ -1,11 +1,12 @@
 {
-  "ConnectionStrings": {
-    "ATMDbConnection": "Data Source=DESKTOP-NKV6MM8;Initial Catalog=ATMDatabase;Integrated Security=True;Trust Server Certificate=True"
-  },
+  "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ATMDbConnection": "Data Source=DESKTOP-NKV6MM8;Initial Catalog=ATMDatabase;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
+}
