--- a/ATM ApplicationTask/appsettings.json
+++ b/ATM ApplicationTask/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ATMDbConnection": "Data Source=DESKTOP-NKV6MM8;Initial Catalog=ATMDatabase;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-NKV6MM8;Initial Catalog=ATMDatabase;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
